@@ -1,5 +1,6 @@
 package com.safa.appcampusgo.servicios;
 
+import com.safa.appcampusgo.dtos.UsuariosActivoDTO;
 import com.safa.appcampusgo.dtos.UsuariosDTO;
 import com.safa.appcampusgo.mappers.UsuariosMapper;
 import com.safa.appcampusgo.modelos.Evento;
@@ -9,7 +10,9 @@ import com.safa.appcampusgo.repositorios.UsuarioRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -32,7 +35,7 @@ public class UsuarioService {
         }
         Usuarios entity = usuariosMapper.toEntity(dto);
         if (dto.getCursoId() != null) {
-            entity.setCurso(cursoRepository.findById(dto.getCursoId()).orElseThrow());
+            entity.setCurso(cursoRepository.findById(dto.getCursoId()).orElseThrow(() -> new NoSuchElementException("Curso no encontrado")));
         }
         return usuariosMapper.toDTO(usuarioRepository.save(entity));
     }
@@ -49,11 +52,23 @@ public class UsuarioService {
         return usuarioRepository.findEventosByUsuarioId(usuarioId);
     }
 
-    public UsuariosDTO obtenerUsuarioMasActivo() {
-        List<Usuarios> list = usuarioRepository.findUsuariosMasActivos();
-        if (list.isEmpty()) {
+    public UsuariosActivoDTO obtenerUsuarioMasActivo() {
+        List<Object[]> results = usuarioRepository.findTopUsuarioConEventos();
+        if (results.isEmpty()) {
             throw new IllegalArgumentException("No hay usuarios activos");
         }
-        return usuariosMapper.toDTO(list.getFirst());
+
+        UsuariosActivoDTO dto = new UsuariosActivoDTO();
+        dto.setNombreUsuario((String) results.get(0)[0]);
+
+        List<UsuariosActivoDTO.EventoTipoDTO> eventos = new ArrayList<>();
+        for (Object[] row : results) {
+            UsuariosActivoDTO.EventoTipoDTO e = new UsuariosActivoDTO.EventoTipoDTO();
+            e.setNombreEvento((String) row[1]);
+            e.setTipo((String) row[2]);
+            eventos.add(e);
+        }
+        dto.setEventos(eventos);
+        return dto;
     }
 }
